Fixed issue where user feed was not vertically aligned in Firefox

--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ h1, h2, h3, h4, h5, h6
 	left:0;
 
   height:25px;
-  margin-top:9px;
+  margin-top:11px;
   padding-top:10px;
   width: 540px;
   left: 50%;
